# run-ingestion-service

./: Makefile  README.md  SOLUTION.md  alembic.ini  docker-compose-db.yaml  pyproject.toml  runs_data.json
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_baseline.json  0002_baseline.json
.data/minio/.minio.sys/: format.json
.data/postgres/: postmaster.pid
.data/postgres/base/1/: 2619  2619_vm  2696  2840  2841  pg_internal.init
.data/postgres/base/16406/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13393  13393_fsm  13393_vm  13397  13398  13398_fsm  13398_vm  13402  13403  13403_fsm  13403_vm  13407  13408  13408_fsm  13408_vm  13412  174  175  2187  2228  2337  2579  2600  2600_fsm  2600_vm  2601  (+205 more)
.data/postgres/base/4/: 2619
.data/postgres/base/5/: 1247  1249  1259  13398  16386  16389  16391  16391_fsm  16391_vm  16396  16397  2579  2604  2606  2608  2610  2610_vm  2619  2619_fsm  2619_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  2704  2840  2840_fsm  2840_vm  (+3 more)
.data/postgres/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
.data/postgres/pg_xact/: 0000
ls_py_handler/: main.py
ls_py_handler/api/routes/: runs.py
ls_py_handler/config/: settings.py  test_settings.py
migrations/: env.py
migrations/versions/: 202508061210_add_s3_columns_to_runs.py  26a9efc758a0_create_runs_table.py
tests/: test_runs.py
tests/benchmarks/: test_run_performance.py
(+16 files in other folders)
